# linux-telescope-control

./: current  current_indi  current_pilot  current_pilot_lib  current_ui  current_ui_lib
clang-format/: clang-format
indi/driver/: CMakeCache.txt  CMakeLists.txt  Makefile  aaa.txt  cmake_install.cmake
indi/driver/include/: tlins_driver.hpp
linux_telescope_indi/: CMakeLists.txt  tlins_driver.cpp
linux_telescope_indi/include/: tlins_driver.hpp
linux_telescope_pilot/: linux_telescope_pilot.pro  main.cpp
linux_telescope_pilot_lib/: linux_telescope_pilot_lib.pro  main.cpp  tlinsdceventhandler.cpp  tlinsdceventhandler.h  tlinsjoystickeventhandler.cpp  tlinsjoystickeventhandler.h  tlinskeyboardeventhandler.cpp  tlinskeyboardeventhandler.h  tlinspilot.cpp  tlinspilot.h  tlinspilotsystemlistener.cpp  tlinspilotsystemlistener.h  tlinspluginclosecalibration.cpp  tlinspluginclosecalibration.h  tlinspluginclosevelocitymeasurment.cpp  tlinspluginclosevelocitymeasurment.h  tlinspluginhorisintalvertical.cpp  tlinspluginhorisintalvertical.h  tlinspluginhorisintalverticalkeys.cpp  tlinspluginhorisintalverticalkeys.h  tlinspluginhorisintalverticalsteps.cpp  tlinspluginhorisintalverticalsteps.h  tlinspluginhorisontalverticaldelta.cpp  tlinspluginhorisontalverticaldelta.h  tlinspluginhorisontalverticalspeeddelta.cpp  tlinspluginhorisontalverticalspeeddelta.h  tlinspluginradcdelta.cpp  tlinspluginradcdelta.h  tlinspluginradcincrement.cpp  tlinspluginradcincrement.h  tlinspluginradcspeeddelta.cpp  tlinspluginradcspeeddelta.h  tlinspluginresetcalibration.cpp  tlinspluginresetcalibration.h  tlinspluginsetreferenceobject.cpp  tlinspluginsetreferenceobject.h  tlinspluginsstate.cpp  tlinspluginsstate.h  tlinsplugintrackingstart.cpp  tlinsplugintrackingstart.h  (+9 more)
linux_telescope_server.v.3.0/: .aa.m.swp  .cproject  .project  .~lock.d.txt#  CMakeCache.txt  CMakeLists-arm.txt  CMakeLists-x86.txt  CMakeLists.txt  Makefile  arm  arm-create-bkp.sh  arm-install.sh  arm-make-update.sh  arm-pkg-install.sh  cmake_install.cmake  install_manifest.txt  x8
linux_telescope_server.v.3.0/client/: sofa_test.c  test2.cpp
linux_telescope_server.v.3.0/configuration/: configuration-astro.xml  configuration-system-service.xml  configuration.xml  configuration_external.xml
linux_telescope_server.v.3.0/idl/: astro.proto  base.proto  device.proto  system_service.proto
linux_telescope_server.v.3.0/include/: m_logic.h  m_logic_ramp.h  tlin_base.h  tlinsBacktrace.hpp  tlinsException.hpp  tlinsId.hpp  tlinsIdStatic.hpp  tlinsLogger.hpp  tlinsMutex.hpp  tlinsSRampGeneratorMode.hpp  tlinsXMLParser.hpp  tlins_DeviceWebSerciceErrors.hpp  tlins_main.hpp  tlins_math.hpp  tlins_utils.hpp
linux_telescope_server.v.3.0/indi/: index.html
linux_telescope_server.v.3.0/octave/: .attitude-obliczenia-kf.m.kate-swp  aa.txt  aa.txt:0  aa2.txt  attitude-obliczenia-2-2019.01.21.m  attitude-obliczenia-2-2019.01.24.m  attitude-obliczenia-2.m  attitude-obliczenia-jp.m  attitude-obliczenia-kf-2.m  attitude-obliczenia-kf-3.m  attitude-obliczenia-kf.m  attitude-obliczenia.m  bb.txt  data-symulation.m  gg.txt  rotation.m  script.m  www.txt  wynik.txt  x.m
linux_telescope_server.v.3.0/scripts/: install.sh
linux_telescope_server.v.3.0/src/: Makefile  aaa.txt  cmake_install.cmake  tlinsException.cpp  tlinsId.cpp  tlinsLogger.cpp  tlinsSRampGeneratorMode.cpp  tlinsXMLParser.cpp  tlins_global.cpp  tlins_main.cpp  tlins_main_serial.cpp  tlins_math.cpp
linux_telescope_server.v.3.0/systemd/: tlins-system-service.service  tlins.service  tlinsAstro.service
linux_telescope_ui/tlinsUI/: Makefile  callgrind.out.f101  csvparser.c  database.db  logevent.hpp  main.cpp  moc_tlinsastroobjectcoordinate.cpp  moc_tlinsastroobjectsviewmodel.cpp  moc_tlinsastrosearchwindow.cpp  (+433 more)
linux_telescope_ui_lib/: Makefile  linux_telescope_ui_lib.cpp  linux_telescope_ui_lib.h  linux_telescope_ui_lib.pro  linux_telescope_ui_lib.pro.user.27f1fa6  linux_telescope_ui_lib.pro.user.3321247  linux_telescope_ui_lib.pro.user.3692f87  linux_telescope_ui_lib.pro.user.4.10-pre1  linux_telescope_ui_lib.pro.user.4.8-pre1  linux_telescope_ui_lib.pro.user.4.9-pre1  linux_telescope_ui_lib.pro.user.bac4a0c  linux_telescope_ui_lib.pro.user.f554024  tlinsastrobaseutils.cpp  tlinsastrobaseutils.h  tlinsastrocalibrationitem.cpp  tlinsastrocalibrationitem.h  tlinsastrocatalogcollection.cpp  tlinsastrocatalogcollection.h  tlinsastrocatalogitem.cpp  tlinsastrocatalogitem.h  tlinsastroenginestate.cpp  tlinsastroenginestate.h  tlinsastrouibase.cpp  tlinsastrouibase.h  tlinscommunicationthread.cpp  tlinscommunicationthread.h  tlinsconfiguration.cpp  tlinsconfiguration.h  tlinsconnection.cpp  tlinsconnection.h  tlinsiers.cpp  tlinsiers.h  tlinsjoystick.cpp  tlinsjoystick.h  tlinskeyboard.cpp  tlinskeyboard.h  tlinskeyssortcut.cpp  tlinskeyssortcut.h  tlinspilotshortcutsdefinitioninterface.cpp  tlinspilotshortcutsdefinitioninterface.h  (+15 more)
(+132 files in other folders)
